# r-type

./: .cl-format.sh  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  LICENSE  README.md  cmake_install.cmake  diff  file.hpp
.githooks/: pre-commit
R-type/: CMakeLists.txt
R-type/R-type/: CMakeLists.txt  R-type.cpp
assets/: untitled.mtl
client/: CMakeLists.txt
client/assets/images/: SU-27CGMEDIUMPOLY.mtl
client/sources/: main.cpp
cmake/: FetchAsio.cmake  FetchDependencies.cmake  FetchRayLib.cmake  RTypeCPackOptions.cmake  (+5 more)
libs/engine/: CMakeLists.txt
libs/engine/includes/: ComponentData.hpp  Entity.hpp  EntityInfo.hpp  GameLoop.hpp  IGame.hpp  ISystem.hpp  Logging_system.hpp  Registry.hpp  Sfml_SpriteFactory.hpp  SparseArray.hpp  controllable.hpp  drawable.hpp  position.hpp
libs/engine/includes/Components/: Animation.hpp  Attack.hpp  Bonus.hpp  ChatModifiableText.hpp  Collision.hpp  Controllable.hpp  Damage.hpp  Dependent.hpp  Drawable.hpp  Editable.hpp  FireRate.hpp  Floating.hpp  Focusable.hpp  Follow.hpp  Gravity.hpp  Health.hpp  HitBox.hpp  HurtBox.hpp  KillOnCollision.hpp  Life.hpp  LifeTime.hpp  Loot.hpp  Parallax.hpp  Position.hpp  RestartOnClick.hpp  ScoreOnDeath.hpp  Serializable.hpp  Solid.hpp  Text.hpp  Velocity.hpp
libs/engine/includes/Events/: Close.hpp  Collision.hpp  Damage.hpp  Death.hpp  End.hpp  EventQueue.hpp  FinalBoss.hpp  IEvent.hpp  Key.hpp  Mouse.hpp
libs/engine/includes/Serialization/: Deserializer.hpp  Serializable.hpp  Serializer.hpp
libs/engine/includes/Systems/: AnimationSystem.hpp  AttackSystem.hpp  ColisionsSystem.hpp  CollisionsSystem.hpp  DamageHandler.hpp  DamageOnCollisionSystem.hpp  DamageSystem.hpp  DeathOnCollisions.hpp  DeathSystem.hpp  EventLogger.hpp  FollowSystem.hpp  GravitySystem.hpp  LifeTimeSystem.hpp  LoggingSystem.hpp  MoveSystem.hpp  ParallaxSystem.hpp  RespawnSystem.hpp
libs/engine/includes/zipper_containers/: Zipper.hpp  ZipperIterator.hpp
libs/engine/sources/: Entity.cpp  Entity.hpp  Events.cpp  GameLoop.cpp  R-Type.hpp  R-type.cpp  Tmp.cpp
libs/engine/sources/Components/: AnimationComponent.hpp  AttackComponent.hpp  ControllableComponent.hpp  DrawableComponent.hpp  HitBoxComponent.hpp  HurtBoxComponent.hpp  LifeComponent.hpp  PositionComponent.hpp  PowerComponent.hpp  Serializable.hpp  VelocityComponent.hpp  WeaponsComponent.hpp
libs/engine/sources/Systems/: AnimateSystem.hpp  AnimationSystem.cpp  AttackSystem.cpp  AttackSystem.hpp  ColisionsSystem.hpp  CollisionsSystem.cpp  ControllSystem.hpp  DamageHandler.cpp  DamageOnCollisionsSystem.cpp  DamageSystem.cpp  DeathOnCollisions.cpp  DeathSystem.cpp  DrawSystem.hpp  EventLogger.cpp  FollowSystem.cpp  GravitySystem.cpp  LifeTimeSystem.cpp  LoggingSystem.hpp  MoveSystem.cpp  ParallaxSystem.cpp  PositionSystem.hpp  RespawnSystem.cpp  System.cpp
libs/mario/: CMakeLists.txt
libs/mario/includes/Components/: Jump.hpp  Rail.hpp
libs/mario/includes/Systems/: JumpSystem.hpp  KeyHandleSystem.hpp  RailSystem.hpp
libs/mario/sources/: MarioGame.cpp  MarioGame.hpp
libs/mario/sources/Systems/: JumpSystem.cpp  KeyHandleSystem.cpp  ProcessKeyDownEvents.cpp  RailSystem.cpp
libs/networking/: CMakeLists.txt
libs/networking/includes/: CircularBuffer.hpp  DiffLogger.hpp  Interpolate.hpp  Lobby.hpp  LobbyClient.hpp  LobbyServer.hpp  Net.hpp  NetworkClientSystem.hpp  NetworkServerSystem.hpp  NetworkSyncSystem.hpp  Snapshot.hpp  Sync.hpp  TcpConnection.hpp  TcpNetManager.hpp  TcpServer.hpp  UdpNetManager.hpp
libs/networking/sources/: CircularBuffer.cpp  CircularBuffer.hpp  Client.hpp  DiffLogger.cpp  Interpolate.cpp  Lobby.cpp  LobbyClient.cpp  LobbyManager.hpp  LobbyRemoteClient.cpp  NetManager.cpp  NetManager.hpp  NetworkClientSystem.cpp  NetworkServerSystem.cpp  NetworkSyncSystem.cpp  Snapshot.cpp  Snapshot.hpp  Sync.cpp  Sync.hpp  TcpNetManager.cpp  TcpNetManager.hpp  TcpServer.cpp  UdpNetManager.cpp  UdpNetManager.hpp
libs/rendering/: CMakeLists.txt
libs/rendering/includes/: Key.hpp  Rendering.hpp
libs/rendering/includes/Events/: KeyDown.hpp  KeyPressed.hpp
libs/rendering/includes/Systems/: Close.hpp  Editable.hpp  Focusable.hpp  Mouse.hpp  Text.hpp  Texture.hpp
libs/rendering/sources/: Events.cpp  Key.cpp  Key.hpp  Render.cpp  Render.hpp  Render2dEntity.cpp  Render2dEntity.hpp  Render3dEntity.cpp  Render3dEntity.hpp  RenderEntity.cpp  RenderEntity.hpp  Rendering.cpp  Rendering.hpp
libs/rendering/sources/Systems/: Close.cpp  Editable.cpp  Focusable.cpp  Mouse.cpp  Text.cpp  Texture.cpp
libs/rtype/: CMakeLists.txt
libs/rtype/includes/Systems/: AttackSystem.hpp
libs/rtype/sources/: Game.hpp  LobbyGame.cpp  NetworkSystem.cpp  NetworkSystem.hpp  RTypeGame.cpp  ScoreManager.cpp  ScoreManager.hpp
libs/rtype/sources/Components/: AI.hpp
libs/rtype/sources/Systems/: #StartGameButton.hpp#  AttackSystem.cpp  AttackSystem.hpp  DeathAnimationManager.cpp  DeathAnimationManager.hpp  End.cpp  End.hpp  EndGameSystem.cpp  EndGameSystem.hpp  FloatingSystem.cpp  FloatingSystem.hpp  JoinButton.cpp  JoinButton.hpp  LobbyClientImpl.cpp  LobbyClientImpl.hpp  LootDropManager.cpp  LootDropManager.hpp  NetworkSystem.cpp  NetworkSystem.hpp  ProcessKeyDownEvents.cpp  ProcessKeyDownEvents.hpp  ProcessKeyPressedEvents.cpp  ProcessKeyPressedEvents.hpp  Restart.cpp  Restart.hpp  ScoreOnDeath.cpp  ScoreOnDeath.hpp  SoundManagerSystem.cpp  SoundManagerSystem.hpp  SpawnEnemySystem.cpp  SpawnEnemySystem.hpp  SpectateButton.cpp  SpectateButton.hpp  StartGameButton.cpp  StartGameButton.hpp  TriggerBonus.cpp  TriggerBonus.hpp  WaveManagerSystem.cpp  WaveManagerSystem.hpp
libs/rtype/sources/Systems/SoundSystem/: ExplosionSoundSystem.cpp  ExplosionSoundSystem.hpp  ShootSoundSystem.cpp  ShootSoundSystem.hpp
server/: CMakeLists.txt
server/includes/: Entity.hpp  Logging_system.hpp  Position_system.hpp  Registry.hpp  Sfml_SpriteFactory.hpp  SparseArray.hpp  controllable.hpp  drawable.hpp  position.hpp  tmp.hpp  velocity.hpp
server/sources/: R-type.cpp  main.cpp  systems.cpp
tests/: CMakeLists.txt  diffing.cpp
(+14 files in other folders)
